# Tic-tac-toe-TCP-game-client

./: .gitignore  README.md  main.py  pyproject.toml  tic-tac-toe-client.spec
.github/workflows/: release-binaries.yml
docs/: build.md
tic_tac_toe_client/: __init__.py  __main__.py  settings.py
tic_tac_toe_client/application/: __init__.py  game_app.py
tic_tac_toe_client/models/: __init__.py  game_model.py
tic_tac_toe_client/network/: __init__.py  client.py
tic_tac_toe_client/ui/: __init__.py  renderer.py
tic_tac_toe_client/utils/: __init__.py  queue_utils.py
